--- a/activityCreateLoops.ipynb
+++ b/activityCreateLoops.ipynb
@@ -129,6 +129,47 @@
     "\t\tbreak"
    ],
    "id": "ed7efe29b8f22e73"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Asigna a la variable de bucle `i` un valor inicial de 5000\n",
+    "\n",
+    "i = 5000\n",
+    "\n",
+    "# Bucle while que genera ID de empleados únicos para el departamento de ventas iterando a través de los números\n",
+    "# y muestra cada ID creado\n",
+    "\n",
+    "while i <= 5150: \n",
+    "    print(i)\n",
+    "    i=i+5"
+   ],
+   "id": "7c7ee59aeda9a5fb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Asigna a la variable de bucle `i` un valor inicial de 5000\n",
+    "\n",
+    "i = 5000\n",
+    "\n",
+    "# Bucle while que genera ID de empleados únicos para el departamento de ventas iterando a través de los números\n",
+    "# y muestra cada ID creado\n",
+    "# Este bucle muestra “Solo quedan 10 ID de empleado válidos” una vez que `i` alcanza 5100\n",
+    "\n",
+    "while i <= 5150: \n",
+    "    print(i)\n",
+    "    if i == 5100:\n",
+    "        print(\"Solo quedan 10 ID de empleado válidos\")\n",
+    "    i = i + 5"
+   ],
+   "id": "66810c6ce8612979"
   }
  ],
  "metadata": {
