LAB-007-Activity_Define and call a function

--- a/function.ipynb
+++ b/function.ipynb
@@ -34,7 +34,16 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Define una función llamada `alert()` \n",
+    "\n",
+    "def alert():\n",
+    "    print(\"Posible problema de seguridad. Investiga más a fondo.\")\n",
+    "    \n",
+    "# llamar a la función\n",
+    "\n",
+    "alert()"
+   ],
    "id": "9df899c8731d9fe3"
   }
  ],
