LAB-007-Activity_Define and call a function

--- a/function.ipynb
+++ b/function.ipynb
@@ -118,6 +118,41 @@
     "list_to_string()"
    ],
    "id": "f3284177ce0c327"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T23:16:59.335263Z",
+     "start_time": "2024-10-22T23:16:59.318856Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# greet employees by name\n",
+    "def greet_employees(name):\n",
+    "    print(\"Welcome! You're logged in\", name)\n",
+    "    \n",
+    "greet_employees(\"Felipe Morales\")\n"
+   ],
+   "id": "4d6ab6860fed4d5c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome! You're logged in Felipe Morales\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "be522fd4d5a34ed8"
   }
  ],
  "metadata": {
