LAB-008-Activity_Create more functions

--- a/function.ipynb
+++ b/function.ipynb
@@ -147,12 +147,51 @@
    "execution_count": 1
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-24T05:03:20.800952Z",
+     "start_time": "2024-10-24T05:03:20.777231Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Use information returned from a function\n",
+    "def calculate_fails(total_attempts, failed_attempts):\n",
+    "    fail_percentage = total_attempts/failed_attempts\n",
+    "    return fail_percentage\n",
+    "\n",
+    "percentage = calculate_fails(4,2)\n",
+    "\n",
+    "if (percentage >= .5):\n",
+    "    print(\"Account locked\")"
+   ],
+   "id": "be522fd4d5a34ed8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account locked\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "be522fd4d5a34ed8"
+   "id": "2ded7bfa2bb38584",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
