--- a/return.ipynb
+++ b/return.ipynb
@@ -88,12 +88,41 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-25T01:49:56.348678Z",
+     "start_time": "2024-10-25T01:49:56.331731Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def greet(name): \n",
+    "    greeting = \"Hola\" \n",
+    "    return name \n",
+    "greet(\"John\")"
+   ],
+   "id": "300e4bf949aa6546",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "300e4bf949aa6546"
+   "id": "cc65cfdd7e616dd5"
   }
  ],
  "metadata": {
