--- a/LAB-010-Activity_Develop_an_algorithm.ipynb
+++ b/LAB-010-Activity_Develop_an_algorithm.ipynb
@@ -460,12 +460,39 @@
    "execution_count": 9
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T06:01:17.727781Z",
+     "start_time": "2024-10-29T06:01:17.712936Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "my_list = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "\n",
+    "my_list[2] =4\n",
+    "\n",
+    "print(my_list)"
+   ],
+   "id": "8194147ffb77444",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 4, 'd']\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8194147ffb77444"
+   "id": "dc878105750b0d2e"
   }
  ],
  "metadata": {
