Expresiones regulares (regex) Laboratorio

--- a/regex.ipynb
+++ b/regex.ipynb
@@ -72,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T14:15:53.174168Z",
-     "start_time": "2024-10-29T14:15:53.152994Z"
+     "end_time": "2024-10-30T04:09:27.348637Z",
+     "start_time": "2024-10-30T04:09:27.327167Z"
     }
    },
    "cell_type": "code",
@@ -85,19 +85,9 @@
    "id": "fc74787fc52c3cc1",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_8656\\3166944433.py:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  re.findall(\"\\d\", \"h32rb17\")\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['3', '2', '1', '7']"
+       "[]"
       ]
      },
      "execution_count": 5,
@@ -110,15 +100,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T14:17:20.690004Z",
-     "start_time": "2024-10-29T14:17:20.676834Z"
+     "end_time": "2024-10-30T04:38:30.009536Z",
+     "start_time": "2024-10-30T04:38:29.998350Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# El símbolo + representa una o más ocurrencias de un carácter específico\n",
     "import re\n",
-    "re.findall('\\d+', \"h32rb17\")"
+    "re.findall('\\w+', \"h32rb17\")"
    ],
    "id": "bb4e61feee981972",
    "outputs": [
@@ -126,16 +116,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_8656\\1961987465.py:3: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  re.findall('\\d+', \"h32rb17\")\n"
+      "<>:3: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_11488\\2827944272.py:3: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "  re.findall('h\\w+', \"h32rb17\")\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['32', '17']"
+       "['h32rb17']"
       ]
      },
      "execution_count": 7,
