--- a/regex.ipynb
+++ b/regex.ipynb
@@ -252,6 +252,33 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-10-30T05:18:30.158807Z",
+     "start_time": "2024-10-30T05:18:30.137195Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "list1 = [1, 2, 3]\n",
+    "\n",
+    "list2 = [\"a\", \"b\", \"c\"]\n",
+    "\n",
+    "print(list1 + list2)"
+   ],
+   "id": "2c1aef0baf35a61",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-10-29T14:29:01.603681Z",
      "start_time": "2024-10-29T14:29:01.587807Z"
     }
