Fix ejemplo algoritmo de análisis sintáctico en Python

--- a/algoritmoAnalisisSintactico.ipynb
+++ b/algoritmoAnalisisSintactico.ipynb
@@ -21,12 +21,12 @@
     "# Open, read, and split a text file\n",
     "with open(\"login_attempts.txt\",\"r\") as file:\n",
     "\tfile_text = file.read()\n",
-    "username = file_text.split()\n",
+    "usernames = file_text.split()\n",
     "\n",
     "# Create a function that counts a user's failed login attemps\n",
     "def login_check(login_list, current_user):\n",
-    "\tcount = 0\n",
-    "\tfor i in lofint_list:\n",
+    "\tcounter = 0\n",
+    "\tfor i in login_list:\n",
     "\t\tif i == current_user:\n",
     "\t\t\tcounter = counter + 1 \n",
     "\t\tif counter >=3:\n",
